feat : MultiplicationAttempt Dto & input 생성 및 적용