@@ -4,7 +4,7 @@ import io.github.tkdlqh2.multiplication_msa.multiplication.domain.Multiplication
 import io.github.tkdlqh2.multiplication_msa.multiplication.domain.MultiplicationResultAttempt;
 import io.github.tkdlqh2.multiplication_msa.multiplication.domain.User;
 import io.github.tkdlqh2.multiplication_msa.multiplication.domain.dto.MultiplicationResultAttemptDto;
-import io.github.tkdlqh2.multiplication_msa.multiplication.exception.MultiplicationException;
+import io.github.tkdlqh2.multiplication_msa.multiplication.domain.dto.MultiplicationResultAttemptInput;
 import io.github.tkdlqh2.multiplication_msa.multiplication.repository.MultiplicationResultAttemptRepository;
 import io.github.tkdlqh2.multiplication_msa.multiplication.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -17,9 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
-import static io.github.tkdlqh2.multiplication_msa.multiplication.exception.MultiplicationErrorCode.ALREADY_CHECKED;
 
 @Service
 @RequiredArgsConstructor
@@ -39,30 +36,24 @@ public class MultiplicationServiceImpl implements MultiplicationService{
 
 	@Transactional
 	@Override
-	public boolean checkAttempt(final MultiplicationResultAttempt attempt) {
+	public MultiplicationResultAttemptDto checkAttempt(final MultiplicationResultAttemptInput attempt) {
 		// 해당 닉네임의 사용자가 존재하는지 확인
-		Optional<User> user = userRepository.findByAlias(attempt.getUser().getAlias());
-
-		// 조작된 답안을 방지
-		if(attempt.isCorrect()){
-			throw new MultiplicationException(ALREADY_CHECKED);
-		}
+		Optional<User> user = userRepository.findByAlias(attempt.alias());
 
 		// 답안을 채점
-		boolean isCorrect = attempt.getResultAttempt() ==
-				attempt.getMultiplication().getFactorA() *
-						attempt.getMultiplication().getFactorB();
+		boolean isCorrect = attempt.resultAttempt() ==
+				attempt.multiplication().getFactorA() *
+						attempt.multiplication().getFactorB();
 
 		MultiplicationResultAttempt checkedAttempt = new MultiplicationResultAttempt(
-				user.orElse(attempt.getUser()),
-				attempt.getMultiplication(),
-				attempt.getResultAttempt(),
+				user.orElse(new User(attempt.alias())),
+				attempt.multiplication(),
+				attempt.resultAttempt(),
 				isCorrect
 		);
 
 		// 답안을 저장
-		attemptRepository.save(checkedAttempt);
-		return isCorrect;
+		return new MultiplicationResultAttemptDto(attemptRepository.save(checkedAttempt));
 	}
 
 	@Override
@@ -74,7 +65,7 @@ public class MultiplicationServiceImpl implements MultiplicationService{
 			Pageable pageable = PageRequest.of(0,5, Sort.by(Sort.Order.desc("Id")));
 			return attemptRepository.findAllByUser(user,pageable).getContent().stream()
 					.map(MultiplicationResultAttemptDto::new)
-					.collect(Collectors.toList());
+					.toList();
 		}
 
 		return Collections.emptyList();
